Fixed horizontal scroll when carousel height < 60px

--- a/web/css/layout/_pagebuilder.less
+++ b/web/css/layout/_pagebuilder.less
@@ -307,6 +307,8 @@
             display: block;
             width: @slider-arrow__width;
             height: @slider-arrow__height;
+            max-width: 100%;
+            max-height: 100%;
         }
 
         &.slick-disabled {
